[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "numpy",
    "Cython"
]
build-backend = "setuptools.build_meta"

[project]
name = "pysurvival"
version = "0.1.2"  # Replace with the dynamic version logic if needed
description = "Open source package for Survival Analysis modeling"
readme = "LONG_DESCRIPTION.txt"
authors = [
    {name = "steph-likes-git", email = "stephane@squareup.com"}
]
license = {text = "Apache Software License (Apache 2.0)"}
keywords = ["survival analysis", "statistics", "machine learning"]
homepage = "https://www.pysurvival.io"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 2",
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
tests = ["pytest", "pytest-pep8"]

[project.dependencies]
numpy = "*"
pandas = "*"
matplotlib = "*"
scikit-learn = "*"
scipy = "*"

[tool.setuptools.package-data]
"" = ["*.csv"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.extension]
[[tool.setuptools.extension]]
name = "pysurvival.utils._functions"
sources = [
    "pysurvival/cpp_extensions/_functions.cpp",
    "pysurvival/cpp_extensions/functions.cpp"
]
language = "c++"
extra-compile-args = ["-std=c++11", "-O3"]

[[tool.setuptools.extension]]
name = "pysurvival.utils._metrics"
sources = [
    "pysurvival/cpp_extensions/_metrics.cpp",
    "pysurvival/cpp_extensions/non_parametric.cpp",
    "pysurvival/cpp_extensions/metrics.cpp",
    "pysurvival/cpp_extensions/functions.cpp"
]
language = "c++"
extra-compile-args = ["-std=c++11", "-O3"]

[[tool.setuptools.extension]]
name = "pysurvival.models._non_parametric"
sources = [
    "pysurvival/cpp_extensions/_non_parametric.cpp",
    "pysurvival/cpp_extensions/non_parametric.cpp",
    "pysurvival/cpp_extensions/functions.cpp"
]
language = "c++"
extra-compile-args = ["-std=c++11", "-O3"]

[[tool.setuptools.extension]]
name = "pysurvival.models._survival_forest"
sources = [
    "pysurvival/cpp_extensions/_survival_forest.cpp",
    "pysurvival/cpp_extensions/survival_forest_data.cpp",
    "pysurvival/cpp_extensions/survival_forest_utility.cpp",
    "pysurvival/cpp_extensions/survival_forest_tree.cpp",
    "pysurvival/cpp_extensions/survival_forest.cpp"
]
language = "c++"
extra-compile-args = ["-std=c++11", "-O3"]

[[tool.setuptools.extension]]
name = "pysurvival.models._coxph"
sources = [
    "pysurvival/cpp_extensions/_coxph.cpp",
    "pysurvival/cpp_extensions/functions.cpp"
]
language = "c++"
extra-compile-args = ["-std=c++11", "-O3"]
include-dirs = ["${numpy.get_include()}"]

[[tool.setuptools.extension]]
name = "pysurvival.models._svm"
sources = ["pysurvival/cpp_extensions/_svm.cpp"]
language = "c++"
extra-compile-args = ["-std=c++11", "-O3"]
include-dirs = ["${numpy.get_include()}"]